--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-lg-7 col-lg-offset-1">
                 <div class="image-container">
-                    <img class="img-rounded" ng-src="{{entry.feed_entry.image}}"/>
+                    <img class="img-rounded" ng-src="{{entry.feed_entry.images[0]}}"/>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -71,16 +71,16 @@
                 </p>
             </div>
             <!--<qrcode version="15"-->
-                    <!--error-correction-level="M"-->
-                    <!--data="{{entry.feed_entry.url}}"-->
-                    <!--download="false"-->
-                    <!--size="200"></qrcode>-->
+            <!--error-correction-level="M"-->
+            <!--data="{{entry.feed_entry.url}}"-->
+            <!--download="false"-->
+            <!--size="200"></qrcode>-->
         </div>
     </li>
 </flex-slider>
 
 <footer>
-
+    <img class="logo-image" src="app/logo.png"/>
 </footer>
 
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
