Revert to old version of flexslider.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 
 <flex-slider flex-slide="entry in news track by entry.feed_entry.id"
              control-nav="false"
+             pause-invisible="false"
              direction-nav="false"
-             slideshow-speed="15000">
+             slideshow-speed="8000">
     <li class="news-entry ">
         <div class="row">
             <div class="col-lg-7 col-lg-offset-1">
@@ -84,7 +85,7 @@
 </footer>
 
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-<script src="app/jquery.flexslider-min.js"></script>
+<script src="app/jquery.flexslider.js"></script>
 <script src="app/jquery.qrcode-0.12.0.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 <script src="app/angular-flexslider.js"></script>
