Make it show something.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                  control-nav="false"
                  pause-invisible="false"
                  direction-nav="false"
-                 slideshow-speed="8000">
-        <div class="container-fluid news-entry">
+                 slideshow-speed="15000">
+        <li class="container-fluid news-entry">
             <div class="background-container">
                 <img ng-src="{{entry.feed_entry.images[0]}}"/>
             </div>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </li>
     </flex-slider>
 
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
