--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <title>Feedpresso Screen</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:700|Bitter:400" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400&subset=latin-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400&subset=latin-ext" rel="stylesheet" type="text/css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -75,7 +77,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-offset-10 col-lg-2 text-right">
+                    <div class="col-lg-offset-10 col-lg-2">
                         <img class="logo-image" src="http://blog.feedpresso.com/img/Logo-Feedpresso-full.svg"/>
                     </div>
                 </div>
