--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="content-container">
                 <div class="row heading">
                     <div class="col-lg-8 col-lg-offset-1">
-                        <h1 class="heading">{{entry.feed_entry.title}}</h1>
+                        <h1 class="heading" ng-bind="entry.feed_entry.title">Loading...</h1>
                     </div>
                 </div>
                 <div class="row">
