--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="content-container">
                 <div class="row header">
                     <div class="col-lg-10 col-lg-offset-1 text-right">
-                        <img class="logo-image" src="http://blog.feedpresso.com/img/Logo-Feedpresso-full.svg"/>
+                        <img class="logo-image" src="//blog.feedpresso.com/img/Logo-Feedpresso-full.svg"/>
                     </div>
                 </div>
                 <div class="row title">
