--- a/index.html
+++ b/index.html
@@ -115,7 +115,17 @@
 <script src="app/rx.all.min.js"></script>
 <script src="app/rx.angular.min.js"></script>
 <script src="app/app.js"></script>
-
+<script language="javascript">
+    // Enforce SSL
+    (function (root) {
+      "use strict";
+      var h = root ? root.location.hostname : "",
+      p = root ? root.location.protocol : "";
+      if ("http:" === p && !(/^(localhost|127.0.0.1)/).test(h)) {
+        root.location.protocol = "https:";
+      }
+    }("undefined" !== typeof window ? window : this));
+</script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
